new proj/src/objects/GE_HQ_Account_Plan_Team__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Acc_Plan_Name__c</fullName>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Team</relationshipLabel>
        <relationshipName>Account_Plan_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acc_Plan_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plan_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acc_Plan_Team_Role__c</fullName>
        <label>Account Plan Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Primary Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecosystems Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITP Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager - Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWAT Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Application Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Sales Director</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Access_Level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_AcctPlan_Team_Role__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;&amp;Id , TEXT(GE_HQ_Acc_Plan_Team_Role__c) , &apos;_parent&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Team Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenbacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water IWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; PGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G &gt; TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G &gt; PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G &gt; D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Plan Team</label>
    <nameField>
        <displayFormat>APT-{0000000}</displayFormat>
        <label>Account Plan Team  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>